--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -566,14 +566,14 @@ form input:focus {
   position: relative;
   overflow: hidden;
   border-radius: 20px;
-  box-shadow: inset 0 0 30px var(--colorTheme);
+  box-shadow: inset 0 0 80px var(--colorTheme);
 }
 
 .background-blur-widget {
   height: 100%;
   width: 100%;
   position: absolute;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(5px);
 }
 
 .weather-widget {
@@ -818,6 +818,17 @@ form input:focus {
   transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
 }
 
+#edit-ui-background {
+  height: 100%;
+  width: 100%;
+  border-radius: 20px;
+  background-color: var(--colorTheme);
+  opacity: 0.35;
+  z-index: -1;
+  position: absolute;
+  transform: translate(-20px, -20px);
+}
+
 #color-theme-selector {
   display: flex;
   align-items: center;
@@ -919,4 +930,27 @@ input[type="color"]:hover {
   outline: none;
   color: white;
   background-color: var(--colorTheme);
+}
+
+#widget-selector {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.widget-selector-widget {
+  height: auto;
+  padding: 10px;
+  margin: 5px;
+  border-radius: 20px;
+  box-shadow: inset 0 0 30px var(--colorTheme);
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bolder;
+  font-size: 19px;
+  flex: 1 0 auto;
+  text-align: center;
+  user-select: none; /* Prevent text selection */
+  -webkit-user-select: none; /* For WebKit-based browsers */
+  -moz-user-select: none; /* For Firefox */
+  -ms-user-select: none; /* For older versions of Internet Explorer */
 }
